vlib/v/checker/tests/lockexpr_missing_return_err.vv
struct Foo {
}

fn baz(shared foo Foo) int {
	lock foo {
	}
}

fn bar(shared foo Foo) int {
	lock foo {
		return 1
	}
}

fn main() {
	shared foo := Foo{}
	bar(shared foo)
}
